h4 heading all over site spacing solve

--- a/src/Components/AllResources/Resources1/SingleResources.css
+++ b/src/Components/AllResources/Resources1/SingleResources.css
@@ -524,3 +524,7 @@ ul li {
     z-index: 55;
     /* background-color: red; */
 }
+
+h4{
+    margin-bottom: 20px;
+}
